--- a/app/src/main/res/layout/custom_preview_thread.xml
+++ b/app/src/main/res/layout/custom_preview_thread.xml
@@ -123,7 +123,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnCancel_Preview"
+                    android:id="@+id/btn_back_example_thread"
                     style="@style/Base.Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                     android:textColor="@color/white_color" />
 
                 <Button
-                    android:id="@+id/btnSubmit_Preview"
+                    android:id="@+id/btn_send_example_thread"
                     style="@style/Base.Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
