--- a/app/src/main/res/layout/fragment_new_thread.xml
+++ b/app/src/main/res/layout/fragment_new_thread.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_new_thread"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -9,6 +10,7 @@
     tools:context=".ui.newthread.NewThread">
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested_scroll_new_thread"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -41,7 +43,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/etTitle_NewThread"
+                android:id="@+id/edit_title_new_thread"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
@@ -88,16 +90,31 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/sniglet_reguler"
-                android:text="@string/choose_thumbnail"
-                android:textColor="@color/toolbar_base"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:fontFamily="@font/sniglet_reguler"
+                    android:text="@string/choose_thumbnail"
+                    android:textColor="@color/toolbar_base"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/image_button_question_mark_new_thread"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/ic_tooltip" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
