--- a/app/src/main/res/layout/recycler_thread_mainforum.xml
+++ b/app/src/main/res/layout/recycler_thread_mainforum.xml
@@ -101,19 +101,13 @@
                     android:orientation="horizontal"
                     android:weightSum="2">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
+                    <ImageView
                         android:id="@+id/recycler_image_thumbnail_main_forum"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:layout_weight="1"
-                        android:background="@color/blue_palette"
-                        android:scaleType="centerCrop"
-                        app:riv_border_color="#333333"
-                        app:riv_border_width="1dp"
-                        app:riv_corner_radius="10dip"
-                        app:riv_mutate_background="true" />
+                        android:layout_weight="1" />
 
                     <RelativeLayout
                         android:layout_width="0dp"
