--- a/app/src/main/res/menu/option_menu_forum_general.xml
+++ b/app/src/main/res/menu/option_menu_forum_general.xml
@@ -3,9 +3,9 @@
     <item
         android:id="@+id/menu_report"
         android:title="@string/report_thread" />
-    <!--<item-->
-        <!--android:id="@+id/menu_hide"-->
-        <!--android:title="@string/hide_thread" />-->
+    <item
+        android:id="@+id/menu_hide"
+        android:title="@string/hide_thread" />
     <!--<item-->
         <!--android:id="@+id/menu_dont_show"-->
         <!--android:title="@string/dont_show_thread" />-->
