--- a/app/src/main/res/layout/fragment_example_thread.xml
+++ b/app/src/main/res/layout/fragment_example_thread.xml
@@ -198,4 +198,19 @@
             android:textColor="@color/white_color"
             android:textSize="17sp" />
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/frame_loading_example_new_thread"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blackPalette"
+        android:visibility="gone">
+
+        <com.developers.coolprogressviews.CircleWithArcProgress
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:arcColor="@color/blue_palette"
+            app:circleColor="@color/royal_blue_palette"
+            app:radius1="30dp" />
+    </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
