--- a/app/src/main/res/layout/recycler_search_fragment.xml
+++ b/app/src/main/res/layout/recycler_search_fragment.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
-    android:background="@color/silver_palette"
+    android:background="@color/gallery_palette"
     android:orientation="horizontal"
+    android:paddingBottom="5dp"
     android:weightSum="2">
 
     <ImageView
@@ -18,38 +19,40 @@
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/recycler_title_search_fragment"
             android:layout_width="wrap_content"
-            android:textColor="@color/blackPalette"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
             android:fontFamily="@font/sniglet_font"
-            android:maxLines="3" />
+            android:maxLines="3"
+            android:textColor="@color/blackPalette" />
 
         <TextView
             android:id="@+id/recycler_writer_search_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/blackPalette"
             android:layout_below="@id/recycler_title_search_fragment"
             android:fontFamily="@font/sniglet_font"
+            android:textColor="@color/blackPalette"
             android:textSize="10sp" />
 
         <TextView
             android:id="@+id/recycler_date_search_fragment"
             android:layout_width="wrap_content"
-            android:textColor="@color/blackPalette"
             android:layout_height="wrap_content"
             android:layout_below="@id/recycler_writer_search_fragment"
             android:fontFamily="@font/sniglet_font"
+            android:textColor="@color/blackPalette"
             android:textSize="10sp" />
 
         <LinearLayout
