--- a/app/src/main/res/layout/custom_story_view.xml
+++ b/app/src/main/res/layout/custom_story_view.xml
@@ -38,13 +38,11 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/progress_story"
-        android:layout_marginTop="10dp"
-        android:visibility="gone">
+        android:layout_marginTop="10dp">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/profile_picture_story"
@@ -60,7 +58,7 @@
             app:riv_oval="true" />
 
         <TextView
-            android:id="@+id/text_username_stories"
+            android:id="@+id/text_username_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
