--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,8 +18,8 @@
 
             <ImageButton
                 android:id="@+id/image_button_back_search_fragment"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/ic_back" />
@@ -30,7 +30,9 @@
                 android:layout_height="40dp"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_toStartOf="@id/ll_dummy_00_search_fragment"
                 android:layout_toEndOf="@id/image_button_back_search_fragment"
                 android:background="@drawable/rectangle_rounded_stroke_blue"
@@ -47,8 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
                 android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
