--- a/app/src/main/res/layout/fragment_new_thread.xml
+++ b/app/src/main/res/layout/fragment_new_thread.xml
@@ -71,26 +71,34 @@
                 android:textColor="@color/blackPalette"
                 android:visibility="gone" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/sniglet_reguler"
-                android:text="@string/category_title"
-                android:textColor="@color/toolbar_base"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_category_new_thread"
+            <LinearLayout
+                android:id="@+id/ll_dummy_00_new_thread"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="15dp" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/sniglet_reguler"
+                    android:text="@string/category_title"
+                    android:textColor="@color/toolbar_base"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_category_new_thread"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp" />
+            </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_dummy_01_new_thread"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -115,8 +123,8 @@
                     android:background="@drawable/ic_tooltip" />
             </LinearLayout>
 
-
             <LinearLayout
+                android:id="@+id/ll_dummy_02_new_thread"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -213,20 +221,6 @@
                     android:scrollbars="vertical"
                     android:textColor="@color/blackPalette"
                     android:textColorHint="@color/iron_palette" />
-
-                <TextView
-                    android:id="@+id/show_error_content_new_thread"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="13dp"
-                    android:layout_marginTop="5dp"
-                    android:drawableStart="@drawable/ic_warning"
-                    android:gravity="center_vertical"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:text="@string/dont_empty_this_edittext"
-                    android:textColor="@color/blackPalette"
-                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
