--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="70dp"
+        app:layout_behavior="android.support.design.widget.FloatingActionButton$Behavior"
         android:backgroundTint="@color/blue_palette"
         android:src="@drawable/ic_add_white" />
 
