--- a/app/src/main/res/layout/bottom_sheet_category.xml
+++ b/app/src/main/res/layout/bottom_sheet_category.xml
@@ -2,21 +2,40 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    app:behavior_hideable="true"
+    android:layout_height="wrap_content"
     android:background="@color/white_color"
+    app:behavior_hideable="true"
     app:behavior_peekHeight="0dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:background="@color/blackPalette" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/sniglet_font"
+            android:text="Kategori"
+            android:textColor="@color/blackPalette"
+            android:textSize="17sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_category_bottom_sheet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:baselineAligned="false"
+            android:overScrollMode="never" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
