--- a/app/src/main/res/layout/recycler_category.xml
+++ b/app/src/main/res/layout/recycler_category.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recycler_relative_category"
     android:layout_width="80dp"
     android:layout_height="100dp"
-    android:layout_marginStart="10dp"
+    android:layout_marginStart="20dp"
     android:layout_marginTop="10dp"
+    android:layout_marginEnd="20dp"
     android:background="@drawable/rectangle_rounded_stroke_blue"
     android:orientation="vertical">
 
