--- a/app/src/main/res/layout/recycler_report_checkbox.xml
+++ b/app/src/main/res/layout/recycler_report_checkbox.xml
@@ -9,7 +9,7 @@
         android:id="@+id/recycler_check"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="@color/toolbar_base"
+        android:textColor="@color/blackPalette"
         android:buttonTint="@color/toolbar_base" />
 
     <TextView
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:textColor="@color/toolbar_base"
+        android:textColor="@color/blackPalette"
         android:visibility="gone" />
 </LinearLayout>
