Integration report forum feature with firebase

--- a/app/src/main/res/layout/custom_report.xml
+++ b/app/src/main/res/layout/custom_report.xml
@@ -20,74 +20,62 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <LinearLayout
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="5dp"
-            android:orientation="horizontal">
+            android:layout_marginEnd="15dp"
+            android:columnCount="2">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:fontFamily="@font/sniglet_font"
+                android:text="@string/info_name"
+                android:textColor="@color/blackPalette" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:fontFamily="@font/sniglet_font"
-                    android:text="@string/info_name"
-                    android:textColor="@color/blackPalette" />
-
-                <TextView
-                    android:id="@+id/report_tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/sniglet_font"
-                    android:text="@string/info_title"
-                    android:textColor="@color/blackPalette" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/report_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:orientation="vertical">
+                android:fontFamily="@font/sniglet_font"
+                android:maxWidth="220dp"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5dp"
+                android:textColor="@color/blackPalette" />
 
-                <TextView
-                    android:id="@+id/report_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sniglet_font"
-                    android:paddingStart="10dp"
-                    android:paddingTop="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/blackPalette" />
+            <TextView
+                android:id="@+id/report_tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sniglet_font"
+                android:text="@string/info_title"
+                android:textColor="@color/blackPalette" />
 
-                <TextView
-                    android:id="@+id/report_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/sniglet_font"
-                    android:paddingStart="10dp"
-                    android:paddingTop="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/blackPalette" />
-            </LinearLayout>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/report_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/sniglet_font"
+                android:maxWidth="220dp"
+                android:maxLines="2"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5dp"
+                android:textColor="@color/blackPalette" />
+        </GridLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/sniglet_font"
             android:text="Alasan"
             android:textColor="@color/blackPalette" />
