--- a/app/src/main/res/layout/fragment_selected_thread.xml
+++ b/app/src/main/res/layout/fragment_selected_thread.xml
@@ -504,7 +504,7 @@
                 android:layout_height="400dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/placeholder"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
             <ImageButton
                 android:id="@+id/download_image_frame_selected"
