Setting up hide thread algorithm and integration with firebase

--- a/app/src/main/res/layout/fragment_forum_other_profile.xml
+++ b/app/src/main/res/layout/fragment_forum_other_profile.xml
@@ -4,4 +4,5 @@
     android:id="@+id/recycler_forum_other_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
     tools:context=".ui.otherprofile.forum.ForumOtherProfile" />
