--- a/app/src/main/res/layout/custom_add_show_case.xml
+++ b/app/src/main/res/layout/custom_add_show_case.xml
@@ -73,7 +73,8 @@
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/button_cancel_background"
                     android:text="@string/cancel"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    android:textColor="@color/white_color" />
 
                 <Button
                     android:id="@+id/btnSubmit_AddShowCase"
@@ -82,7 +83,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/background_reply"
                     android:text="@string/send"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    android:textColor="@color/white_color" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -99,6 +101,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
     </android.support.constraint.ConstraintLayout>
-
-
 </android.support.v4.widget.NestedScrollView>
