--- a/app/src/main/res/layout/fragment_new_thread.xml
+++ b/app/src/main/res/layout/fragment_new_thread.xml
@@ -134,13 +134,13 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="160dp"
+                    android:layout_marginStart="10dp"
                     android:orientation="vertical"
                     android:weightSum="2">
 
                     <RelativeLayout
                         android:layout_width="100dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/rectangle_rounded_stroke_blue">
 
@@ -155,7 +155,6 @@
                     <RelativeLayout
                         android:layout_width="100dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/rectangle_rounded_stroke_blue">
@@ -169,18 +168,38 @@
                     </RelativeLayout>
                 </LinearLayout>
 
-                <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/image_thumbnail_new_thread"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="@color/soft_blue_palette"
-                    android:scaleType="centerCrop"
-                    app:riv_border_color="@color/blue_palette"
-                    app:riv_border_width="2dip"
-                    app:riv_corner_radius="10dip"
-                    app:riv_mutate_background="true" />
+                    android:layout_marginEnd="15dp">
+
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:id="@+id/image_thumbnail_new_thread"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/white_color"
+                        android:scaleType="centerCrop"
+                        app:riv_border_color="@color/blue_palette"
+                        app:riv_border_width="2dip"
+                        app:riv_corner_radius="10dip"
+                        app:riv_mutate_background="true" />
+
+                    <TextView
+                        android:id="@+id/text_delete_thumbnail_new_thread"
+                        android:text="Hapus"
+                        android:textSize="17sp"
+                        android:fontFamily="@font/sniglet_font"
+                        android:paddingTop="7dp"
+                        android:textColor="@color/blue_palette"
+                        android:paddingBottom="7dp"
+                        android:gravity="center"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/rectangle_rounded_down_stroke_blue" />
+                </RelativeLayout>
             </LinearLayout>
 
 
