--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,25 +8,23 @@
     tools:context=".ui.profile.Profile">
 
     <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nestedScrollView_Profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:scrollbars="vertical">
+        android:fillViewport="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <FrameLayout
+                android:id="@+id/fl_dummy_00_profile"
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="wrap_content">
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/image_background_profile"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="170dp"
                     android:background="@color/cornflower_blue_palette"
                     android:scaleType="fitXY"
                     app:riv_border_color="#333333"
@@ -39,9 +37,9 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="120dp">
 
-                        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <com.makeramen.roundedimageview.RoundedImageView
                             android:id="@+id/image_profile_picture_profile"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
@@ -57,200 +55,61 @@
 
                         <ImageButton
                             android:id="@+id/btn_change_picture_profile"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:layout_below="@id/image_profile_picture_profile"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_alignEnd="@+id/image_profile_picture_profile"
-                            android:layout_marginTop="-50dp"
+                            android:layout_alignParentBottom="true"
                             android:layout_marginEnd="1dp"
-                            android:background="@drawable/plus" />
+                            android:background="@drawable/ic_edit" />
                     </RelativeLayout>
-
-                    <ImageButton
-                        android:id="@+id/btn_change_home_profile"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"/>
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_change_home_profile"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="end|bottom"
+                    android:background="@drawable/btn_plus" />
             </FrameLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fl_dummy_00_profile"
+                android:textAlignment="center"
+                app:tabBackground="@color/white_color"
+                app:tabSelectedTextColor="@color/blackPalette"
+                app:tabTextAppearance="@style/MyCustomTabTextAppearance"
+                app:tabTextColor="@color/iron_palette" />
 
             <TextView
                 android:id="@+id/tv_merchant_name_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/toolbar_base"
+                android:layout_below="@id/fl_dummy_00_profile"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="-25dp"
+                android:background="@drawable/rectangle_rounded_stroke_blue"
+                android:fontFamily="@font/sniglet_font"
+                android:gravity="center"
+                android:maxWidth="220dp"
+                android:paddingStart="25dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="25dp"
+                android:paddingBottom="5dp"
+                android:text="Tk Sumber Jaya"
+                android:textColor="@color/blackPalette"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/text_position_profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/iron_palette"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <View
+            <android.support.v4.view.ViewPager
+                android:id="@+id/view_pager_profile"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/blackPalette" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="20dp"
-                android:weightSum="2">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Email"
-                        android:textColor="@color/iron_palette"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/tv_email_profile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:maxLines="2"
-                        android:textColor="@color/blackPalette"
-                        android:textSize="17sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="mid Number    "
-                        android:textColor="@color/iron_palette"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/text_mid_profile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/blackPalette"
-                        android:textSize="17sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/blackPalette" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_profile_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="true"
-                android:overScrollMode="never"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/blackPalette" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_profile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:nestedScrollingEnabled="false"
-                android:overScrollMode="never"
-                android:scrollbars="none" />
-
-            <Button
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Keluar"
-                android:textColor="@color/blue_palette"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
-    <FrameLayout
-        android:id="@+id/picture_frame_profile"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:background="@color/blackPalette"
-        android:visibility="gone">
-
-        <RelativeLayout
-            android:id="@+id/rl_frame_main_profile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent">
-
-            <ImageButton
-                android:id="@+id/btn_close_frame_profile"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/button_close" />
-
-            <ImageView
-                android:id="@+id/image_frame_profile"
-                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_above="@id/download_image_frame_profile"
-                android:layout_below="@id/btn_close_frame_profile"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="40dp"
-                android:scaleType="fitXY" />
-
-            <ImageButton
-                android:id="@+id/download_image_frame_profile"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/background_ic_file_download" />
-
-            <TextView
-                android:id="@+id/merchantName_Profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_frame_profile"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:textColor="@color/white_color"
-                android:textSize="15sp" />
+                android:layout_below="@id/tab_layout_profile"
+                android:animateLayoutChanges="true" />
         </RelativeLayout>
-    </FrameLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <FrameLayout
         android:id="@+id/frame_loading_profile"
