--- a/app/src/main/res/layout/fragment_hidden_forum.xml
+++ b/app/src/main/res/layout/fragment_hidden_forum.xml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycler_hidden_forum"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.hiddenforum.HiddenForumFragment" />
+    android:background="@color/white_color"
+    tools:context=".ui.profile.hiddenforum.HiddenForumFragment">
+
+    <ImageButton
+        android:id="@+id/image_button_back_hidden_forum"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_back" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/sniglet_font"
+        android:text="@string/menu_hidden"
+        android:textColor="@color/blackPalette"
+        android:textSize="25sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_below="@id/image_button_back_hidden_forum"
+        android:layout_marginTop="10dp"
+        android:background="@color/silver_palette" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_hidden_forum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image_button_back_hidden_forum"
+        android:layout_marginTop="40dp" />
+</RelativeLayout>
